BEGIN;

CREATE TABLE IF NOT EXISTS PROJECTS(
    PROJECT_ID INTEGER PRIMARY KEY,
    PROJECT_NAME TEXT
);

CREATE TABLE IF NOT EXISTS NODES(
    PROJECT_ID INTEGER, 
    NODE_ID INTEGER,
    NODE_NAME TEXT,
    GRAPHIC_NAME TEXT,
    PARENT_NODE INTEGER,
    PRIMARY KEY (PROJECT_ID, NODE_ID)
);

CREATE TABLE IF NOT EXISTS ANNOTATIONS(
    PROJECT_ID INTEGER, 
    NODE_ID INTEGER, 
    ANNOTATION_ID INTEGER,
    RICH_TEXT TEXT,
    ANNOTATION_POLYGON TEXT,
    PRIMARY KEY (PROJECT_ID, NODE_ID, ANNOTATION_ID)
); 

COMMIT;